# xclang

./: .gitignore  3rdpart.build.txt  CMakeLists.txt  README  clang.define.cmake
3rdpart_build/: CMakeLists.txt
3rdpart_build/.svn/: all-wcprops  entries
3rdpart_build/.svn/text-base/: CMakeLists.txt.svn-base
3rdpart_build/build-script/: arm-linux-gnueabi.cmake  arm-linux-gnueabihf.cmake  i386-linux-gnu.cmake  x86_64-linux-gnu.cmake
3rdpart_build/build-script/binutils/: Makefile
3rdpart_build/build-script/compiler-rt/: Makefile
3rdpart_build/build-script/cxx/: Makefile  i386-linux-gnu.cmake
3rdpart_build/build-script/cxxabi/: Makefile
3rdpart_build/build-script/cxxrt/: Makefile  i386-linux-gnu.cmake
3rdpart_build/build-script/cxxstub/: Makefile
3rdpart_build/build-script/cxxstub/libcxxstub/: CMakeLists.txt  stub.cpp
3rdpart_build/build-script/linux-sdk/: gensdk-libc.rb
3rdpart_build/build-script/mingw-w64/: Makefile
3rdpart_build/build-script/unwind/: Makefile
3rdpart_build/lua/: CMakeLists.txt
3rdpart_build/lua/.svn/: all-wcprops  entries
3rdpart_build/lua/include/.svn/: all-wcprops  entries
3rdpart_build/lua/src/.svn/: all-wcprops  entries
3rdpart_build/luabind/: CMakeLists.txt
3rdpart_build/luabind/.svn/: all-wcprops  entries
3rdpart_build/luabind/doc/.svn/: all-wcprops  entries
3rdpart_build/luabind/examples/.svn/: all-wcprops  entries
3rdpart_build/luabind/examples/any_converter/.svn/: all-wcprops  entries
3rdpart_build/luabind/examples/cln/.svn/: all-wcprops  entries
3rdpart_build/luabind/examples/filesystem/.svn/: all-wcprops  entries
3rdpart_build/luabind/examples/glut/.svn/: all-wcprops  entries
3rdpart_build/luabind/examples/hello_world/.svn/: all-wcprops  entries
3rdpart_build/luabind/examples/intrusive_ptr/.svn/: all-wcprops  entries
3rdpart_build/luabind/examples/regexp/.svn/: all-wcprops  entries
3rdpart_build/luabind/luabind/: object.hpp
3rdpart_build/luabind/luabind/.svn/: all-wcprops  entries
3rdpart_build/luabind/luabind/detail/: format_signature.hpp
3rdpart_build/luabind/luabind/detail/.svn/: all-wcprops  entries
3rdpart_build/luabind/src/.svn/: all-wcprops  entries
3rdpart_build/luabind/test/.svn/: all-wcprops  entries
Root/: CMakeLists.txt
Root/luaScript/: xclang-all-arch.lua
codegen/: CMakeLists.txt  generateOptions.rb  options.hpp  options_autogen_orig.cpp  options_autogen_orig.hpp  optionsautogen.cpp
config/: CMakeLists.txt
config/luaScript/: xclang-core.lua  xclang-i686-pc-linux-gnu.lua  xclang-x86_64-pc-linux-gnu.lua  xclang-x86_64-w64-mingw32.lua
config/platform/: i686-pc-linux-gnu.7z  i686-pc-mingw32.7z  shared_ld_scripts.rb
config/platform/android/xclang/include/: stddef.h
config/platform/arm-linux-gnueabihf/xclang/include/: unwind.h
config/platform/i386-linux-gnu/xclang/include/: stdarg.h
config/share/: aarch64-linux-gnu.lua  arm-linux-androideabi.lua  arm-linux-gnueabi.lua  arm-linux-gnueabihf.lua  i386-linux-gnu.lua  i686-w64-mingw32.lua  x86_64-apple-darwin.lua  x86_64-linux-gnu.lua  x86_64-pc-linux-gnueabi.lua  x86_64-w64-mingw32.lua  xclang-actions.lua  xclang-i386-apple-darwin.lua  xclang-i686-pc-mingw32.lua  xclang-llvm.lua
driver/: CMakeLists.txt  cc1_main.cpp  cc1as_main.cpp  configreader.cpp  configreader.hpp  driver.cpp  driver.hpp  lua_config_reader.cpp  lua_config_reader.hpp  options.cpp  options.hpp  programs.cpp  programs.hpp
executable/: CMakeLists.txt  main.cpp
libdriver/: CC1Options.cpp  CMakeLists.txt  Compilation.cpp  Driver.cpp  DriverOptions.cpp  OptTable.cpp  ToolChain.cpp  ToolChains.cpp  Tools.cpp  WindowsToolChain.cpp  XClangOptions.h  XClangOptions.inc
options/: CMakeLists.txt  ClangOptions.org.cpp  ClangOptions.org.inc  generateOptions.rb  options.cpp  options.hpp  options_autogen_orig.cpp  options_autogen_orig.hpp  optionsautogen.cpp
test/: Makefile  Makefile-Win  gc.cpp  main.asm  main.c  main.cpp  sub.asm  sub.c  xclang-cc1-help.cpp  xclang-help.cpp  xclang.help
