
set( SRC
	src/class.cpp
	src/class_info.cpp
	src/class_registry.cpp
	src/class_rep.cpp
	src/create_class.cpp
	src/error.cpp
	src/exception_handler.cpp
	src/function.cpp
	src/inheritance.cpp
	src/link_compatibility.cpp
	src/object_rep.cpp
	src/open.cpp
	src/pcall.cpp
	src/scope.cpp
	src/stack_content_by_name.cpp
	src/weak_ref.cpp
	src/wrapper_base.cpp
	luabind/adopt_policy.hpp
	luabind/back_reference.hpp
	luabind/back_reference_fwd.hpp
	luabind/class.hpp
	luabind/class_info.hpp
	luabind/config.hpp
	luabind/container_policy.hpp
	luabind/copy_policy.hpp
	luabind/dependency_policy.hpp
	luabind/discard_result_policy.hpp
	luabind/error.hpp
	luabind/exception_handler.hpp
	luabind/from_stack.hpp
	luabind/function.hpp
	luabind/get_main_thread.hpp
	luabind/get_pointer.hpp
	luabind/handle.hpp
	luabind/iterator_policy.hpp
	luabind/lua_include.hpp
	luabind/luabind.hpp
	luabind/make_function.hpp
	luabind/nil.hpp
	luabind/object.hpp
	luabind/open.hpp
	luabind/operator.hpp
	luabind/out_value_policy.hpp
	luabind/prefix.hpp
	luabind/raw_policy.hpp
	luabind/return_reference_to_policy.hpp
	luabind/scope.hpp
	luabind/shared_ptr_converter.hpp
	luabind/tag_function.hpp
	luabind/typeid.hpp
	luabind/value_wrapper.hpp
	luabind/version.hpp
	luabind/weak_ref.hpp
	luabind/wrapper_base.hpp
	luabind/yield_policy.hpp
)
add_library( luabind ${SRC})
